done small button

--- a/project/main/templates/main/layout.html
+++ b/project/main/templates/main/layout.html
@@ -14,7 +14,7 @@
 <body>
    <aside>
       <img src="{% static 'main/img/logo.png' %}" alt="logo">
-      <span class="logo">LionShop</span>
+      <span class="logo">Lion</span>
    <h3>Навигация</h3>
    <ul>
       <a href="{% url "home" %}">
@@ -33,7 +33,7 @@
          <li><i class="fa-solid fa-user"></i>Юзер</li>
       </a>
       <a href="{% url "create" %}">
-         <li><button type="button" class="btn btn-primary btn-lg"><i class="fa-solid fa-circle-plus"></i>Добавить запись</button></li>
+         <li><button type="button" class="btn btn-primary btn-sm"><i class="fa-solid fa-circle-plus"></i>Добавить запись</button></li>
       </a>
    </ul>
    </aside>
