change color user

--- a/project/main/static/main/css/main.css
+++ b/project/main/static/main/css/main.css
@@ -97,6 +97,19 @@ form {
    list-style-type: circle;
 }
 
-.registaration {
+.registaration,
+.login {
+   color: #fff;
+}
+
+.user-wrapper {
+   padding-top: 50px;
+}
+
+.user {
+   margin-left: 10px;
+}
+
+.user-title {
    color: #fff;
 }
