--- a/project/main/templates/main/layout.html
+++ b/project/main/templates/main/layout.html
@@ -30,7 +30,7 @@
          <li><i class="fa-solid fa-phone"></i>Контакты</li>
       </a>
       <a href="{% url "user" %}">
-         <li><i class="fa-solid fa-user"></i>Юзер</li>
+         <li><i class="fa-solid fa-user"></i>Акаунт</li>
       </a>
       <a href="{% url "create" %}">
          <li><button type="button" class="btn btn-primary btn-sm"><i class="fa-solid fa-circle-plus"></i>Добавить запись</button></li>
