--- a/project/users/templates/users/registration/password_reset_form.html
+++ b/project/users/templates/users/registration/password_reset_form.html
@@ -1,12 +1,12 @@
 {% extends "main/layout.html" %}
 
 {% block content %}
-<h2>Password reset</h2>
+<h2 class="user-title">Востановить пароль</h2>
 <hr>
 <form action="{% url "password_reset" %}" method="post">
    {{form}}
    {% csrf_token %}
-   <button type="submit">submit</button>
+   <button type="submit">Отправить</button>
 </form>
 {% endblock content %}
 
