--- a/project/users/templates/users/registration/login.html
+++ b/project/users/templates/users/registration/login.html
@@ -2,19 +2,19 @@
 
 
 {% block content %}
-   <h2>Login</h2>
+   <h2 class="user-title">Login</h2>
    <hr>
 
    {% if form.errors %}
       <p>{{form.errors.error}}</p>
    {% endif %}
 
-   <form action="{% url "login" %}" method="post">
+   <form action="{% url "login" %}" method="post" class="login">
       {{form}}
       {% csrf_token %}
       <button type="submit" class="btn btn-success">Submit</button>
    </form>
 
-   <a href="{% url "password_reset" %}">Forgot password?</a>
+   <a href="{% url "password_reset" %}">Забыли пароль?</a>
 
 {% endblock content %}
