--- a/project/users/templates/users/registration/register.html
+++ b/project/users/templates/users/registration/register.html
@@ -1,13 +1,13 @@
 {% extends "main/layout.html" %}
 
 {% block content %}
-   <h2>Register</h2>
+   <h2 class="user-title">Register</h2>
    <hr>
 
    <form action="{% url "register" %}" method="post" class="registaration">
       {{form}}
       {% csrf_token %}
-      <button type="submit" class="btn btn-success">submit</button>
+      <button type="submit" class="btn btn-success">Отправить</button>
    </form>
 {% endblock content %}
 
