--- a/project/users/templates/users/user.html
+++ b/project/users/templates/users/user.html
@@ -1,15 +1,15 @@
 {% extends "main/layout.html" %}
 
 {% block content %}
-   <h3>Home page</h3>
-   <hr>
 
-   {% if user.is_authenticated %}
-      <a href=" {% url "logout" %}">Logout</a>
-   {% else %}
-      <a href="{% url "login" %}">Login</a>  
-      <a href="{% url "register" %}">Register</a>
+   <div class="user-wrapper">
+      {% if user.is_authenticated %}
+         <a href=" {% url "logout" %}" class="user">Выйти</a>
+      {% else %}
+         <a href="{% url "login" %}" class="user btn btn-primary btn-sm">Войти</a>  
+         <a href="{% url "register" %}" class="user btn btn-primary btn-sm">Зарегестрироваться</a>
 
-   {% endif %}
+      {% endif %}
+   </div>
 
 {% endblock content %}
