--- a/project/news/templates/news/details_view.html
+++ b/project/news/templates/news/details_view.html
@@ -9,10 +9,13 @@
       <h1>{{article.title}}</h1>
       <p>{{article.date}}</p>
       <p>{{article.full_text}}</p>
-      <a href="{% url "news-delete" article.id %}" class="btn btn-danger">Удалить</a>
-      <a href="{% url "news-update" article.id %}" class="btn btn-info">Редактировать</a>
+      {% if request.user == article.author %}
 
+        <p>Текущий пользователь: {{ request.user.username }}</p>
+        <p>Автор статьи: {{ article.author.username }}</p>
 
+        <a href="{% url 'news-delete' article.id %}" class="btn btn-danger">Удалить</a>
+        <a href="{% url 'news-update' article.id %}" class="btn btn-info">Редактировать</a>
+      {% endif %}
    </div>
 {% endblock content %}
-
