--- a/project/news/templates/news/news_home.html
+++ b/project/news/templates/news/news_home.html
@@ -12,6 +12,7 @@
          {% for el in news %}
             <div class = "alert alert-warning">
                <h3>{{el.title}}</h3>
+               <span class="author">Добавлено пользователем: {{ el.author.username }}</span>
                <p>{{el.anons}}</p>
                <a href="{% url "news-detail" el.id %}" class="btn btn-warning">Читать детальнее</a>
             </div>   
