--- a/project/users/templates/users/user.html
+++ b/project/users/templates/users/user.html
@@ -1,5 +1,7 @@
 {% extends "main/layout.html" %}
-
+{% block title %}
+   Акаунт
+{% endblock title %}
 {% block content %}
 
    <div class="user-wrapper">
