change page main, added text

--- a/project/main/templates/main/index.html
+++ b/project/main/templates/main/index.html
@@ -7,8 +7,15 @@
 {% block content %}
    <div class="features">
       <h1>{{ title }}</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto totam exercitationem explicabo porro sunt repellat iste dolor assumenda quis consequatur error ea, minus non perspiciatis odit, laboriosam facilis quisquam voluptatum.
+      <p>Наши новости и статьи - это ваш надежный источник информации о мире IT. Мы предоставляем актуальные и интересные материалы о последних технологических трендах, важных событиях и многом другом. Наша цель - держать вас в курсе событий и делиться ценной информацией.
       </p>
+      <h4>Наши возможности:</h4>
+      <ul>
+         <li class="about-li"><b>Актуальные новости:</b> Мы следим за самыми свежими событиями в мире IT и делимся ими с вами.</li>
+         <li class="about-li"><b>Полезные статьи:</b> Наши статьи помогут вам углубить свои знания и навыки в IT-сфере.</li>
+         <li class="about-li"><b>Обратная связь:</b> Мы всегда готовы выслушать вас и отвечать на ваши вопросы.</li>
+         <li class="about-li"><b>Сообщество:</b> Присоединяйтесь к нашему сообществу и обменивайтесь информацией с единомышленниками.</li>
+      </ul>
 
       <a href="{% url "about" %}"><button class="btn btn-warning">На страницу про нас</button></a>
    </div>
